--- a/package.json
+++ b/package.json
@@ -10,12 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.12.2",
     "@tailwindcss/vite": "^4.1.6",
+    "hls.js": "^1.6.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.6"
+    "react-player": "^2.16.0",
+    "react-router-dom": "^7.6.2",
+    "swiper": "^11.2.7",
+    "tailwindcss": "^4.1.6",
+    "video.js": "^8.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
