--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.6",
+    "hls.js": "^1.6.2",
     "lucide-react": "^0.509.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
-    "tailwindcss": "^4.1.6"
+    "react-player": "^2.16.0",
+    "swiper": "^11.2.7",
+    "tailwindcss": "^4.1.6",
+    "video.js": "^8.22.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
